--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div id="logo" onclick="slowScroll('#top')">
-      <span>Your company name</span>
+      <span>Your company name HERE</span>
     </div>
     <div id="about">
       <a href="#" title="Возможности" onclick="slowScroll('#main')">Возможности</a>
