--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div id="top">
     <h1>Программирование</h1>
-    <h3>как способ жизни!</h3>
+    <h3>как стиль жизни!</h3>
   </div>
 
   <div id="main">
@@ -37,7 +37,7 @@
 
   <div id="overview">
     <h2>Преимущества</h2>
-    <h4>с нами все проще</h4>
+    <h4>с нами все гораздо проще</h4>
 
     <div class="img">
       <img src="https://itproger.com/img/courses/1532975967.jpg" alt="">
