--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="img">
       <img src="https://itproger.com/img/courses/1530341233.jpg" alt="">
-      <span>Уроки PhotoShop для начинающих</span>
+      <span>Уроки PhotoShop для всех!</span>
     </div>
   </div>
 
