--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae asperiores debitis perspiciatis perferendis nemo tempore distinctio officia commodi et non tempora laudantium culpa nostrum, quidem, quasi ratione itaque nam.</p>
     </div>
     <div>
-      <span class="title">Информация</span><br>
+      <span class="title">Полезная Информация</span><br>
       <span class="heading">Что входит в услуги сервиса</span>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae asperiores debitis perspiciatis perferendis nemo tempore distinctio officia commodi et non tempora laudantium culpa nostrum, quidem, quasi ratione itaque nam.</p>
       <span class="heading">Что входит в услуги сервиса</span>
