--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae asperiores debitis perspiciatis perferendis nemo tempore distinctio officia commodi et non tempora laudantium culpa nostrum, quidem, quasi ratione itaque nam.</p>
     </div>
     <div>
-      <span class="title">Гарантии</span><br>
+      <span class="title">Наши Гарантии</span><br>
       <span class="heading">Какие гарантии есть</span>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae asperiores debitis perspiciatis perferendis nemo tempore distinctio officia commodi et non tempora laudantium culpa nostrum, quidem, quasi ratione itaque nam.</p>
       <span class="heading">Какие гарантии есть</span>
